--- a/birthday_website/index.html
+++ b/birthday_website/index.html
@@ -152,17 +152,9 @@ animation: sparkle 2s ease-in-out infinite;
 <!-- Hero Section -->
 <section id="hero" class="h-screen flex flex-col items-center justify-center px-6 relative overflow-hidden">
 <div id="confetti-container" class="absolute top-0 left-0 w-full h-full pointer-events-none"></div>
-<h1 class="dancing-script text-5xl text-center text-primary mb-6 floating">Happy Birthday, Affuu!</h1>
-<p class="text-lg text-center text-gray-700 mb-8 max-w-xs fade-in">To my dearest friend, who fills every day with joy and laughter. Here's to celebrating you!</p>
-<div class="cake-container mb-8">
-<img src="images/cake.jpg" alt="Birthday Cake" class="cake-image">
-<div class="cake-sparkles">
-<div class="cake-sparkle"></div>
-<div class="cake-sparkle"></div>
-<div class="cake-sparkle"></div>
-<div class="cake-sparkle"></div>
-<div class="cake-sparkle"></div>
-</div>
+<div class="text-center">
+  <h1 class="dancing-script text-5xl text-center text-primary mb-6 floating">Happy Birthday, Affuu!</h1>
+  <p class="text-lg text-center text-gray-700 mb-8 max-w-xs mx-auto fade-in">To my dearest friend, who fills every day with joy and laughter. Here's to celebrating you!</p>
 </div>
 <div class="absolute bottom-10 left-0 w-full flex justify-center">
 <a href="#message" class="animate-bounce">
@@ -355,7 +347,7 @@ document.addEventListener('DOMContentLoaded', function() {
   {
     src: "images/roses.jpeg",
     title: "Roses of Connection 🌹",
-    description: "Roses carefully chosen and carried across the distance 🌹 — a symbol of a feeling that’s pure, sincere, and unlike anything else ❤️✨."
+    description: "Roses carefully chosen and carried across the distance 🌹 — a symbol of a feeling that's pure, sincere, and unlike anything else ❤️✨."
   },
   {
     src: "images/routien.jpeg",
