--- a/birthday_website/index.html
+++ b/birthday_website/index.html
@@ -189,24 +189,24 @@ animation: sparkle 2s ease-in-out infinite;
 </div>
 </section>
 <!-- Gallery Section -->
-<section id="gallery" class="h-screen flex flex-col items-center justify-center py-6 bg-white relative">
-<h2 class="dancing-script text-4xl text-center text-primary mb-6">Our Memories</h2>
-<div class="relative w-full h-[75vh] overflow-hidden">
-<div class="absolute inset-0 flex items-center justify-center">
-<div class="flex flex-col items-center w-full max-w-2xl mx-auto px-2">
+<section id="gallery" class="min-h-screen flex flex-col items-center justify-center py-6 bg-white relative">
+<h2 class="dancing-script text-4xl text-center text-primary mb-4">Our Memories</h2>
+<div class="relative w-full overflow-hidden px-4">
+<div class="flex items-center justify-center">
+<div class="flex flex-col items-center w-full max-w-2xl mx-auto">
 <div class="relative w-full max-w-[500px] gallery-item">
-<div class="w-full h-[450px] rounded-lg shadow-lg overflow-hidden bg-white p-2">
+<div class="w-full h-[300px] sm:h-[350px] md:h-[400px] rounded-lg shadow-lg overflow-hidden bg-white p-2">
 <img src="images/hug.jpeg" alt="Memory 1" class="w-full h-full object-contain">
 </div>
-<div class="mt-4 text-center">
-<p class="dancing-script text-2xl text-primary mb-2">Our First Hug ❤️</p>
-<p class="text-lg text-gray-700 leading-relaxed">The warmest, most unforgettable hug that started our beautiful journey together. A moment frozen in time, filled with warmth and love.</p>
+<div class="mt-2 text-center">
+<p class="dancing-script text-xl sm:text-2xl text-primary mb-1">Our First Hug ❤️</p>
+<p class="text-sm sm:text-base text-gray-700 leading-relaxed">The warmest, most unforgettable hug that started our beautiful journey together. A moment frozen in time, filled with warmth and love.</p>
 </div>
 </div>
 </div>
 </div>
 </div>
-<div class="absolute bottom-6 left-0 w-full flex flex-col items-center gap-4">
+<div class="absolute bottom-6 left-0 w-full flex flex-col items-center gap-2">
 <div class="flex gap-2">
 <div class="w-2 h-2 rounded-full bg-primary"></div>
 <div class="w-2 h-2 rounded-full bg-gray-300"></div>
